# Web_Interaction

./: README.md
Answering/: CMakeLists.txt  main.cpp  server.cpp  server.h
Requesting/: CMakeLists.txt  client.cpp  client.h  main.cpp
