cmake_minimum_required(VERSION 3.20)
project(Answering)
set(CMAKE_CXX_STANDARD 23)
set(PROJECT_SOURCES main.cpp server.h server.cpp)
find_package(Boost COMPONENTS system thread REQUIRED)
add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES} ws2_32 wsock32)